# linProj

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: Doxyfile.in
docs/sphinx/: api.rst  architecture.rst  build_and_run.rst  conf.py  constraints.rst  index.rst  overview.md  protocol.rst  testing.rst
include/: ipc_defs.h
src/: client1.cpp  client2.cpp  client_common.h  libipc.cpp  libipc.h  server.cpp
tests/: conftest.py  test_client_server.py  test_server_threads.py
